# Pylomer

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.py  index.rst  pyproject.toml
Pylomer/: FloryHuggins.py  GordonTaylor.py  Kwei.py  __init__.py  crank_and_hopfenberg.py  diffusion.py  exampleTg.py
Pylomer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Pylomer/python_module/: __init__.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/autoapi/: index.doctree
docs/.doctrees/autoapi/Pylomer/: index.doctree
docs/.doctrees/autoapi/Pylomer/FloryHuggins/: index.doctree
docs/.doctrees/autoapi/Pylomer/GordonTaylor/: index.doctree
docs/.doctrees/autoapi/Pylomer/crank_and_hopfenberg/: index.doctree
docs/_sources/autoapi/: index.rst
docs/_sources/autoapi/Pylomer/: index.rst
docs/_sources/autoapi/Pylomer/FloryHuggins/: index.rst
docs/_sources/autoapi/Pylomer/GordonTaylor/: index.rst
docs/_sources/autoapi/Pylomer/crank_and_hopfenberg/: index.rst
docs/autoapi/: index.html
docs/autoapi/Pylomer/: index.html
docs/autoapi/Pylomer/FloryHuggins/: index.html
docs/autoapi/Pylomer/GordonTaylor/: index.html
docs/autoapi/Pylomer/crank_and_hopfenberg/: index.html
examples/: example.py  example_Crank.ipynb  example_FloryHuggins.ipynb  example_GordonTaylor copy.ipynb  example_GordonTaylor.ipynb  example_diffusion.ipynb
src/: lib.rs
test/: test_rust.py
