
[project]
name = "Pylomer"
version = "0.0.2"
authors = [
    {name = "Dominik Borrmann", email = "dominik.borrmann@tu-dortmund.de"},
]
description = "Provides the most basic implementations of thermodynamic and mechanical models centering around the modelling of polymers like Flory Huggins and Gordon Taylor"
readme = "README.md"
license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy"]
classifiers = [
"Programming Language :: Rust",
"Programming Language :: Python"
]


[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
module-name = "Pylomer.rust_module.rust"
