
[project]
name = "Pylomer"
version = "0.0.2"
authors = [
    {name = "Dominik Borrmann", email = "dominik.borrmann@tu-dortmund.de"},
]
description = "Provides the most basic implementations of thermodynamic and mechanical models centering around the modelling of polymers like Flory Huggins and Gordon Taylor"
readme = "README.md"
license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy"]
classifiers = [
"Programming Language :: Python"
]
